--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ let lanes = [c.width*0.25, c.width*0.5, c.width*0.75];
 let obstacles = [];
 let collectibles = [];
 let lastGen = 0;
-
+let scrollOffset = 0;
 const skins = [
   {id:'classique', name:'Classique', color:'#ff0', price:0},
   {id:'rouge', name:'Rouge', color:'#f00', price:30},
